fixed overflow hidden issue on shop page, fixed code promo check after changing qty in checkout, added btn to remove code

--- a/src/components/checkout/checkout.css
+++ b/src/components/checkout/checkout.css
@@ -9,6 +9,26 @@
     border-radius: 5px;
     box-shadow: 5px 5px 10px 3px rgb(41, 41, 41);
 }
+
+.checkout {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-direction: column;
+    min-height: inherit;
+}
+
+.cancel-promo{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: rgb(54, 54, 54);
+    width: 55px;
+    height: 55px;
+    border-left: solid rgb(139, 139, 139) 1px;
+    background-image: linear-gradient(to bottom right, white, rgb(212, 212, 212));
+}
+
 .qty-cont{
     
     display: flex;
