--- a/src/components/shop/shop.css
+++ b/src/components/shop/shop.css
@@ -12,6 +12,8 @@
     background-color: white;
     background-image: linear-gradient(45deg, #dedede 25%, #e8e8e8 25%, #e8e8e8 50%, #dedede 50%, #dedede 75%, #e8e8e8 75%, #e8e8e8 100%);
     background-size: 42.43px 42.43px;
+    min-height: 900px;
+    height: 100vh;
 }
 
 .shop-item{
